[gd_scene load_steps=63 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://scenes/levels/Level2.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/TimePolygon2D.gd" type="Script" id=3]
[ext_resource path="res://scenes/levels/Level3.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/levels/Level4.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/levels/Level5.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/levels/Level6.tscn" type="PackedScene" id=7]
[ext_resource path="res://sprites/clock.png" type="Texture" id=8]
[ext_resource path="res://scenes/levels/Level1.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/levels/Level7.tscn" type="PackedScene" id=10]
[ext_resource path="res://sound/ticktock.wav" type="AudioStream" id=11]
[ext_resource path="res://scenes/levels/Level9.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/levels/Level8.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/levels/Level10.tscn" type="PackedScene" id=14]
[ext_resource path="res://scenes/levels/Level12.tscn" type="PackedScene" id=15]
[ext_resource path="res://scenes/levels/Level11.tscn" type="PackedScene" id=16]
[ext_resource path="res://scenes/levels/Level13.tscn" type="PackedScene" id=17]

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 8 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 8 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 8 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 8 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 8 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 8 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 8 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 8 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 8 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 8 )
region = Rect2( 320, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 8 )
region = Rect2( 352, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 8 )
region = Rect2( 384, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 8 )
region = Rect2( 416, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 8 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 8 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 8 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 8 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 8 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 8 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 8 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 8 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 8 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 8 )
region = Rect2( 320, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 8 )
region = Rect2( 352, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 8 )
region = Rect2( 384, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 8 )
region = Rect2( 416, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 8 )
region = Rect2( 448, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 8 )
region = Rect2( 480, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 8 )
region = Rect2( 512, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 8 )
region = Rect2( 544, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 8 )
region = Rect2( 576, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 8 )
region = Rect2( 608, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 8 )
region = Rect2( 640, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 8 )
region = Rect2( 672, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 8 )
region = Rect2( 448, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 8 )
region = Rect2( 480, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 8 )
region = Rect2( 512, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 8 )
region = Rect2( 544, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 8 )
region = Rect2( 576, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 8 )
region = Rect2( 608, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 8 )
region = Rect2( 640, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 8 )
region = Rect2( 672, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=23]
animations = [ {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ) ],
"loop": false,
"name": "10 seconds",
"speed": 1.4
}, {
"frames": [ SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ) ],
"loop": true,
"name": "All",
"speed": 2.2
}, {
"frames": [ SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ) ],
"loop": false,
"name": "Reset",
"speed": 7.0
} ]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )
tutorial_levels = 6
level_scenes = [ ExtResource( 9 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 10 ), ExtResource( 13 ), ExtResource( 12 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 15 ), ExtResource( 17 ) ]

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0

[node name="LevelCanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enable = true

[node name="Levels" type="Node2D" parent="LevelCanvasLayer"]

[node name="HUD" type="CanvasLayer" parent="."]
layer = 10

[node name="Panel" type="Panel" parent="HUD"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -184.0
margin_top = -135.0
margin_right = 184.0
margin_bottom = 135.0

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -112.0
margin_right = 100.0
margin_bottom = 112.0

[node name="Message" type="RichTextLabel" parent="HUD/Panel/VBoxContainer"]
margin_right = 200.0
margin_bottom = 200.0
grow_horizontal = 2
rect_min_size = Vector2( 200, 200 )

[node name="ContinueButton" type="Button" parent="HUD/Panel/VBoxContainer"]
margin_top = 204.0
margin_right = 200.0
margin_bottom = 224.0
text = "Continue"

[node name="Polygon2D" type="Polygon2D" parent="HUD"]
visible = false
position = Vector2( 913, 497 )
z_as_relative = false
color = Color( 0.760784, 0.207843, 0.207843, 1 )
script = ExtResource( 3 )

[node name="LevelName" type="Label" parent="HUD"]
anchor_left = 0.5
anchor_top = 0.95
anchor_right = 0.5
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
align = 1

[node name="SandClockControl" type="Control" parent="HUD"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -80.0
margin_top = -80.0

[node name="SandClock" type="AnimatedSprite" parent="HUD/SandClockControl"]
scale = Vector2( 4, 4 )
frames = SubResource( 23 )
animation = "All"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="HUD/Panel/VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
